objects/sbaa__Approver__c.object
<CustomObject>
    <customHelpPage>sbaa__ApproverHelp</customHelpPage>
    <description>Approvers are associated with the Approval Rule, driving what occurs on the Approval itself.</description>
    <fields>
        <fullName>sbaa__DelegatedApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used with Delegated Approvals, lookup to the Approver who is the delegate for this Approver</description>
        <inlineHelpText>Used with Delegated Approvals, lookup to the Approver who is the delegate for this Approver</inlineHelpText>
        <label>Delegated Approver</label>
        <referenceTo>sbaa__Approver__c</referenceTo>
        <relationshipLabel>Delegating Approvers</relationshipLabel>
        <relationshipName>DelegatingApprovers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__DelegatedUserId__c</fullName>
        <description>User associated with the Delegated Approver</description>
        <formula>sbaa__DelegatedApprover__r.sbaa__User__c</formula>
        <inlineHelpText>User associated with the Delegated Approver</inlineHelpText>
        <label>Delegated User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__DelegationEnd__c</fullName>
        <description>Approval delegations end at the end of this date</description>
        <inlineHelpText>Approval delegations end at the end of this date</inlineHelpText>
        <label>Delegation End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sbaa__DelegationStart__c</fullName>
        <description>Approval delegations start on the beginning of this date</description>
        <inlineHelpText>Approval delegations start on the beginning of this date</inlineHelpText>
        <label>Delegation Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sbaa__GroupId__c</fullName>
        <description>If Approver is a Group instead of a single User, populate with the Group ID</description>
        <inlineHelpText>If Approver is a Group instead of a single User, populate with the Group ID</inlineHelpText>
        <label>Group ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__NextApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver that needs to approve after this Approver approves</description>
        <inlineHelpText>Approver that needs to approve after this Approver approves</inlineHelpText>
        <label>Next Approver</label>
        <referenceTo>sbaa__Approver__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__Unanimous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Approver is a Group, checked if all members need to Approve in order to consider the Approval approved</description>
        <inlineHelpText>If Approver is a Group, checked if all members need to Approve in order to consider the Approval approved</inlineHelpText>
        <label>Unanimous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If Approver is a single User, lookup to that User</description>
        <inlineHelpText>If Approver is a single User, lookup to that User</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approver</label>
    <listViews>
        <fullName>sbaa__All</fullName>
        <columns>NAME</columns>
        <columns>sbaa__User__c</columns>
        <columns>sbaa__NextApprover__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Approver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>